Fix z-indexes

--- a/public/main.css
+++ b/public/main.css
@@ -426,7 +426,8 @@ svg#timezoneMap g {
     cursor: pointer;
     transition: background-color 0.4s ease-out;
     --animate-duration: 0.2s;
-
+   z-index: 100;
+    z-index: 150;
 }
 
 #modalCover:hover {
@@ -435,8 +436,9 @@ svg#timezoneMap g {
 }
 
 #modalOuter {
+    top: 0;
+    z-index: 150;
 
-    z-index: 15;
     width: 100%;
     max-width: 600px;
     
